--- a/src/Sheet/Sheet.scss
+++ b/src/Sheet/Sheet.scss
@@ -9,11 +9,13 @@
   &.hidden {
     display: none;
   }
+  z-index: $zindex-sheet-backdrop;
 }
 .pgn__sheet-component {
   position: fixed;
   padding: 20px;
   background-color: white;
+  z-index: $zindex-sheet;
   &.pgn__sheet__dark {
     background-color: rgb(0,38,43);
     color: rgb(242,240,239);
